--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <header>
+    <header class="header-main">
         <h1>Willkommen, <%= user.username %>!</h1>
         <div class="nav-links">
             <a href="/reviews/new" class="btn-primary">Neue Bewertung</a>
@@ -25,8 +25,8 @@
             <p class="text-muted">Anzahl Bewertungen: <%= product.reviewCount %></p>
             <p>Durchschnittliche Bewertungen:</p>
             <ul>
-                <li>Qualität: <%= (product.ratings.quality).toFixed(1) %></li>
-                <li>Service: <%= (product.ratings.service).toFixed(1) %></li>
+                <li>Unterricht: <%= (product.ratings.quality).toFixed(1) %></li>
+                <li>Freundlichkeit: <%= (product.ratings.service).toFixed(1) %></li>
                 <li>Atmosphäre: <%= (product.ratings.atmosphere).toFixed(1) %></li>
             </ul>
 
