--- a/views/new-review.ejs
+++ b/views/new-review.ejs
@@ -13,7 +13,7 @@
     </header>
     <div class="form-card">
         <form action="/reviews/new" method="POST">
-            <input type="text" name="name" placeholder="Name des Objekts" required>
+            <input type="text" name="name" placeholder="Name des Lehrers" required>
             <label for="quality">Unterricht (<span id="quality-value">3</span>):</label>
             <input type="range" id="quality" name="quality" min="1" max="6" value="3" required oninput="document.getElementById('quality-value').innerText = this.value;">
 
