--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -13,7 +13,7 @@
         <h1>Willkommen, <%= user.username %>!</h1>
         <div class="nav-links">
             <form action="#" method="GET" class="search-form">
-                <input type="text" id="searchInput" placeholder="Suche nach Produkt..." autocomplete="off">
+                <input type="text" id="searchInput" placeholder="Suche nach Bewertung..." autocomplete="off">
             </form>
             <a href="/reviews/new" class="btn-primary">Neue Bewertung</a>
             <% if (user.isAdmin) { %>
