--- a/views/new-review.ejs
+++ b/views/new-review.ejs
@@ -10,6 +10,7 @@
 <div class="container">
     <header>
         <h1>Neue Bewertung abgeben</h1>
+        <a href="dashboard.ejs">Abbruch</a>
     </header>
     <div class="form-card">
         <form action="/reviews/new" method="POST">
